[package]
name = "arrow_data_slice"
version = "0.1.0"
description = "A module that allows arrow binaries to be read out into Javascript without materializing the entire binary into a JS data structure."
authors = ["The Perspective Authors"]
edition = "2018"
license-file = "../../../LICENSE"
repository = "https://github.com/finos/perspective"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "^0.2.63", features = ["nightly"]}
js-sys = "0.3.45"
arrow = "2.0.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
