[package]
name = "arrow_accessor"
version = "0.1.0"
description = "A module that allows arrow binaries to be read out into Javascript without materializing the entire binary into a JS data structure."
authors = ["The Perspective Authors"]
edition = "2018"
license-file = "../../../LICENSE"
repository = "https://github.com/finos/perspective"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "^0.2.63", features = ["nightly"]}
serde_json = "1.0.59"
js-sys = "0.3.45"
chrono = "0.4.19"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.arrow]
git = "https://github.com/apache/arrow"
rev = "c2bffc4b8f5c1cc9885fb227a1d359c82d5de2f5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.3.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[[bench]]
name = "native_benchmark"
harness = false